[package]
name = "stormcastrs"
version = "0.2.0"
edition = "2021"
description = "Weather station data collector with Prometheus metrics exposition"
authors = ["Hunter Wigelsworth"]
license = "MIT"

[dependencies]
env_logger = "0.11"                                         # logging implementation (configured via RUST_LOG env var)
log = "0.4"                                                 # logging facade
ntex = { version = "2.4", features = ["tokio"] }            # async web framework
once_cell = "1.19"                                          # lazy static initialization (modern replacement for lazy_static)
prometheus = "0.13"                                         # metrics collection and exposition
serde = { version = "1.0", features = ["derive"] }          # serialization framework
serde_json = "1.0"                                          # json parsing (for flexible extra fields)
serde_urlencoded = "0.7"                                    # query string parsing
thiserror = "1.0"                                           # ergonomic error types

[profile.release]
lto = true                                                  # link-time optimization for smaller binaries
strip = true                                                # strip symbols from release builds
